# LLm-inference

./: .dockerignore  .env.example  .gitignore  .ruff.toml  Dockerfile  LICENSE  NOTICE.txt  Readme.md  agency_manager.py  compose-dev.yaml  devcontainer.json  llm_manager.py  main.py  manual_launch.py  model.py  prompts.py  pyproject.toml  pytest.ini  setup.cfg  test.ipynb  test.py  tools.py  tools_metadata.json  websocket.py  websocket_client.py  whisper_client.py
.devcontainer/: .dockerignore  .env.example  Dockerfile  compose-dev.yaml  devcontainer.json  docker-compose.yml
.github/workflows/: docker-image.yml
agency/: calculator.py  code_execution.py  model_response.py  parser.py  rag.py  time_managment.py  weather.py
config/: database.env.example
llama_cpp_chat_model/: __init__.py  llama_chat_model.py  llama_client.py  llama_client_async.py
test/: conftest.py
tools/: calculator.py  code_execution.py  rag.py  search.py  time_managment.py  weather.py
utils/: chroma_client.py  config.py  decorators.py  logger.py  postgress_client.py
